--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.wdullaer:materialdatetimepicker:3.1.1'
     compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
