--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -35,6 +41,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.wdullaer:materialdatetimepicker:3.1.1'
     compile 'com.jakewharton:butterknife:8.5.1'
-    compile 'com.github.lecho:hellocharts-library:1.5.8@aar'
+    compile 'com.github.lecho:hellocharts-android:v1.5.8'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
+
